css class renaming finished

--- a/style/addTask.css
+++ b/style/addTask.css
@@ -846,7 +846,7 @@ ul {
     padding: 0px 25px;
 }
 
-.successfullyBtn {
+.success-info {
     position: absolute;
     bottom: 160px;
     left: 711px;
