--- a/style/contacts-add-contact.css
+++ b/style/contacts-add-contact.css
@@ -63,6 +63,11 @@
     justify-content: flex-end;
     margin-bottom: 32px;
 }
+#close_popup img:hover {
+    background: #EEEEEE;
+    border-radius: 100%;
+}
+
 
 #close_popup_mobile {
     display: none;
