--- a/style/style.css
+++ b/style/style.css
@@ -19,6 +19,31 @@
     --body-background-color: #F6F7F8;
 }
 
+input {
+    outline: none;
+    border: 1px solid #D1D1D1;
+    border-radius: 10px;
+    padding: 12px 20px;
+}
+textarea:focus,
+input:focus {
+    border-color: #29ABE2;
+}
+
+textarea {
+    margin: 0;
+    outline: none;
+    border: 1px solid #D1D1D1;
+    border-radius: 10px;
+    min-height: 120px !important;
+    padding: 12px 20px;
+    resize: vertical;
+}
+.required-star{
+    color: red;
+}
+
+
 .mt-24{
     margin-top: 24px;
 }
@@ -299,6 +324,7 @@ section {
     }
 }
 
+
 @media (max-width: 1000px) {
     .content {
         max-width: calc(100vw - 160px);
@@ -335,6 +361,7 @@ section {
         -ms-overflow-style: none;
         scrollbar-width: none;
     }
+ 
 
     ::-webkit-scrollbar {
         display: none;
