--- a/style/style.css
+++ b/style/style.css
@@ -82,6 +82,7 @@ textarea {
     padding: 16px; /*16px */
     gap: 5px;
     height: 56px;
+    min-width: 120px;
     width: auto; /* fit-content */
     border-radius: 10px;
     font-size: 17px;
