--- a/style/style.css
+++ b/style/style.css
@@ -91,6 +91,11 @@ textarea {
     white-space: nowrap;
 }
 
+.button img {
+    height: 24px;
+    width: 24px;
+}
+
 .border-radius-8{
     border-radius: 8px;
 }
