--- a/style/task.css
+++ b/style/task.css
@@ -137,6 +137,49 @@ ul {
     background-color: white;
 }
 
+#category_list_container {
+    display: flex;
+    flex-direction: column;
+}
+
+.cateogry-list {
+    background-color: white;
+    border-bottom-left-radius: 10px;
+    border-bottom-right-radius: 10px;
+}
+
+.cateogry-list-item {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    align-items: center;
+    width: 98%;
+    padding-left: 30px;
+    padding-right: 30px;
+    padding-top: 5px;
+    padding-bottom: 5px;
+    border-bottom: 1px solid #D1D1D1;
+    border-radius: 10px !important;
+}
+
+.colorCircle {
+    width: 20px;
+    height: 20px;
+    border: 2px solid rgba(0, 0, 0);
+    border-radius: 50%;
+}
+
+.colorCircle:hover {
+    cursor: pointer;
+    box-shadow: 2px 4px 4px 2px rgba(0, 0, 0, 0.30);
+}
+
+.selected {
+    background-color: #2A3647;
+    color: white;
+    border-radius: 10px !important;
+}
+
 #edit_input {}
 
 .subtask-edit-input {
