--- a/style/task.css
+++ b/style/task.css
@@ -12,6 +12,33 @@ ul {
     justify-content: space-between;
 }
 
+.task-popup-card {
+    height: fit-content;
+    max-height: 90vh;
+    width: 37vw;
+    background-color: white;
+    border-radius: 10px;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    box-shadow: 0px 2px 10px 0px rgba(0, 0, 0, 0.25);
+    border: 1px solid #D1D1D1;
+    padding: 20px;
+}
+
+.task-popup-bg {
+    background-color: rgba(0, 0, 0, 0.4);
+    z-index: 999;
+    position: fixed;
+    left: 0;
+    right: 0;
+    top: 0;
+    bottom: 0;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
 .task-container {
     display: flex;
     flex-direction: column;
