--- a/style/task.css
+++ b/style/task.css
@@ -14,16 +14,70 @@ ul {
 
 .task-popup-card {
     height: fit-content;
-    max-height: 90vh;
-    width: 37vw;
+    /* max-height: 90vh; */
+    /* width: 37vw; */
     background-color: white;
     border-radius: 10px;
     display: flex;
-    flex-direction: column;
+    /* flex-direction: column; */
     justify-content: space-between;
     box-shadow: 0px 2px 10px 0px rgba(0, 0, 0, 0.25);
+    /* border: 1px solid #D1D1D1; */
+    /* padding: 20px; */
+}
+.left-popup {
+    position: relative;
+    height: 100%;
+    width: 476px;
+    background: #2A3647;
+    border-radius: 30px;
+    border-bottom-right-radius: 0;
+    border-top-right-radius: 0;
+    border-bottom-left-radius: 30px;
+    border-top-left-radius: 30px;
+    color: white;
+    padding: 66px 46px;
+}
+
+.center-popup {
+    display: flex;
+    margin-left: 92px;
+    margin-right: 92px;
+    margin-bottom: 100px;
+}
+.right-popup {
+    position: relative;
+    justify-content: flex-end;
+    padding: 66px 46px 66px 0px;
+}
+.colorSettingBox{
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: flex-start;
+    align-items: center;
+    gap: 10px;
+    padding: 5px 5px;
+    border-bottom-right-radius: 10px;
+    border-bottom-left-radius: 10px;
     border: 1px solid #D1D1D1;
-    padding: 20px;
+}
+
+.selectedColor {
+    width: 25px !important;
+    height: 25px !important;
+    border: 2px solid #2A3647;
+    box-shadow: 2px 4px 4px 2px rgba(0, 0, 0, 0.30);
+}
+
+
+.close-popup-container{
+    display: flex;
+    justify-content: flex-end;
+}
+
+.hover {
+    background: #EEEEEE;
+    border-radius: 100%;
 }
 
 .task-popup-bg {
