--- a/style/task.css
+++ b/style/task.css
@@ -17,7 +17,10 @@ ul {
     /* max-height: 90vh; */
     /* width: 37vw; */
     background-color: white;
-    border-radius: 10px;
+    border-bottom-right-radius: 30px;
+    border-top-right-radius: 30px;
+    border-bottom-left-radius: 35px;
+    border-top-left-radius: 35px;
     display: flex;
     /* flex-direction: column; */
     justify-content: space-between;
@@ -25,10 +28,11 @@ ul {
     /* border: 1px solid #D1D1D1; */
     /* padding: 20px; */
 }
+
 .left-popup {
-    position: relative;
+    /* position: relative; */
     height: 100%;
-    width: 476px;
+    width: 350px;
     background: #2A3647;
     border-radius: 30px;
     border-bottom-right-radius: 0;
@@ -39,18 +43,73 @@ ul {
     padding: 66px 46px;
 }
 
+.blue-line {
+    margin-top: 3px;
+    left: 0;
+    height: 3px;
+    width: 90px;
+    background: #29ABE2;
+    border-radius: 1.5px;
+}
+
+
+.left-popup-content {
+    display: flex;
+    flex-direction: column;
+}
+
+.left-popup-content img {
+    width: 40px;
+}
+
+.left-popup-text-headline {
+    font-size: 42px;
+    font-stretch: normal;
+    color: white;
+}
+
+.left-popup-text {
+    font-size: 20px;
+    color: white;
+}
+
 .center-popup {
     display: flex;
-    margin-left: 92px;
-    margin-right: 92px;
-    margin-bottom: 100px;
+    margin-left: 48px;
+    margin-right: 48px;
+    /* margin-bottom: 100px; */
 }
+
+.center-popup-content {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+.center-popup-content img {
+    height: 70px;
+    width: 70px;
+    position: absolute;
+}
+
+.add-category-logo-bg {
+    width: 130px;
+    height: 130px;
+    border-radius: 50%;
+    background-color: #29ABE2;
+}
+
 .right-popup {
-    position: relative;
+    /* position: relative; */
     justify-content: flex-end;
     padding: 66px 46px 66px 0px;
 }
-.colorSettingBox{
+.custom-select {
+    max-width: 310px;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+}
+.colorSettingBox {
     display: flex;
     flex-wrap: wrap;
     justify-content: flex-start;
@@ -68,9 +127,13 @@ ul {
     border: 2px solid #2A3647;
     box-shadow: 2px 4px 4px 2px rgba(0, 0, 0, 0.30);
 }
+.popup-button-container {
+    display: flex;
+    margin-top: 20px;
+    gap: 24px;
+}
 
-
-.close-popup-container{
+.close-popup-container {
     display: flex;
     justify-content: flex-end;
 }
@@ -249,11 +312,13 @@ ul {
     align-items: center;
     gap: 5px;
 }
+
 .delete-category-container img:hover {
     cursor: pointer;
     background-color: #EEEEEE;
     border-radius: 5px;
 }
+
 .colorCircle {
     width: 20px;
     height: 20px;
@@ -337,6 +402,38 @@ ul {
         padding-left: 50px;
         padding-right: 50px;
     }
+
+    .task-popup-card {
+        flex-direction: column;
+    }
+
+    .left-popup {
+        display: flex;
+        flex-direction: column;
+        border-top-right-radius: 30px !important;
+        border-bottom-left-radius: 0 !important;
+        height: calc(100vh * 0.4) !important;
+        width: 600px !important;
+        padding: 24px 24px 0px 24px;
+    }
+
+    .center-popup {
+        display: flex;
+        justify-content: center;
+        margin-top: -60px;
+        margin-bottom: 0px;
+        margin-left: 0px;
+        margin-right: 0px;
+    }
+
+    .right-popup {
+        padding: 0px 24px 24px 24px;
+        flex-direction: column;
+        align-items: center !important;
+        justify-content: center !important;
+        width: 100% !important;
+        height: calc(100vh * 0.3) !important;
+    }
 }
 
 @media (max-width: 1130px) {
@@ -375,5 +472,16 @@ ul {
     .task-contentposition {
         padding-left: 16px;
         padding-right: 16px;
+    }
+
+    .left-popup {
+        width: calc(100vw - 32px) !important;
+    }
+
+}
+
+@media (max-width: 400px) {
+    .left-popup {
+        width: 100% !important;
     }
 }
