--- a/style/task.css
+++ b/style/task.css
@@ -31,7 +31,7 @@ ul {
 
 .left-popup {
     /* position: relative; */
-    height: 100%;
+    /* height: 100%; */
     width: 350px;
     background: #2A3647;
     border-radius: 30px;
@@ -85,6 +85,7 @@ ul {
     justify-content: center;
     align-items: center;
 }
+
 .center-popup-content img {
     height: 70px;
     width: 70px;
@@ -100,15 +101,33 @@ ul {
 
 .right-popup {
     /* position: relative; */
+    flex-direction: column;
     justify-content: flex-end;
     padding: 66px 46px 66px 0px;
 }
+
+#close_popup {
+    display: flex;
+    justify-content: flex-end;
+    margin-bottom: 32px;
+}
+
+#close_popup img:hover {
+    background: #EEEEEE;
+    border-radius:5px;
+}
+
+#close_popup_mobile {
+    display: none;
+}
+
 .custom-select {
     max-width: 310px;
     display: flex;
     flex-direction: column;
     justify-content: center;
 }
+
 .colorSettingBox {
     display: flex;
     flex-wrap: wrap;
@@ -127,6 +146,7 @@ ul {
     border: 2px solid #2A3647;
     box-shadow: 2px 4px 4px 2px rgba(0, 0, 0, 0.30);
 }
+
 .popup-button-container {
     display: flex;
     margin-top: 20px;
@@ -433,6 +453,22 @@ ul {
         justify-content: center !important;
         width: 100% !important;
         height: calc(100vh * 0.3) !important;
+    }
+
+    #close_popup {
+        display: none;
+    }
+
+    #close_popup_mobile {
+        width: 100%;
+        display: flex;
+        justify-content: flex-end;
+    }
+
+    #close_popup_mobile img:hover {
+        cursor: pointer;
+        border-radius: 5px;
+        background-color: lightslategray;
     }
 }
 
