--- a/style/task.css
+++ b/style/task.css
@@ -114,7 +114,7 @@ ul {
 
 #close_popup img:hover {
     background: #EEEEEE;
-    border-radius:5px;
+    border-radius: 5px;
 }
 
 #close_popup_mobile {
@@ -282,9 +282,25 @@ ul {
     border-radius: 0px;
 }
 
+.pointer:hover {
+    cursor: pointer;
+}
+
 .custom-input img {
     height: 24px;
     width: 24px;
+}
+
+.custom-input:hover {
+    cursor: pointer;
+}
+
+input::-webkit-calendar-picker-indicator {
+    cursor: pointer;
+}
+
+.click:hover {
+    cursor: pointer;
 }
 
 .prio-container {
@@ -304,12 +320,14 @@ ul {
 #category_list_container {
     display: flex;
     flex-direction: column;
+    background-color: white;
 }
 
 .cateogry-list {
     background-color: white;
     border-bottom-left-radius: 10px;
     border-bottom-right-radius: 10px;
+    margin-bottom: 8px;
 }
 
 .cateogry-list-item {
@@ -324,6 +342,11 @@ ul {
     padding-bottom: 5px;
     border-bottom: 1px solid #D1D1D1;
     border-radius: 10px !important;
+}
+
+.cateogry-list-item:hover {
+    background-color: #EEEEEE;
+    cursor: pointer;
 }
 
 .delete-category-container {
@@ -351,10 +374,21 @@ ul {
     box-shadow: 2px 4px 4px 2px rgba(0, 0, 0, 0.30);
 }
 
+.delete-icon:hover,
+.edit-icon:hover {
+    cursor: pointer;
+    border-radius: 5px;
+    box-shadow: 2px 4px 4px 2px rgba(0, 0, 0, 0.10);
+}
+
 .selected {
     background-color: #2A3647;
     color: white;
     border-radius: 10px !important;
+}
+
+.selected:hover {
+    background-color: #2A3647;
 }
 
 #edit_input {}
