--- a/style/task.css
+++ b/style/task.css
@@ -53,12 +53,12 @@ ul {
 }
 
 
-.left-popup-content {
+#left_popup_content {
     display: flex;
     flex-direction: column;
 }
 
-.left-popup-content img {
+#left_popup_content img {
     width: 40px;
 }
 
