--- a/style/task.css
+++ b/style/task.css
@@ -329,7 +329,7 @@ input::-webkit-calendar-picker-indicator {
     background-color: white;
     border-bottom-left-radius: 10px;
     border-bottom-right-radius: 10px;
-    margin-bottom: 8px;
+    /* margin-bottom: 8px; */
 }
 
 .cateogry-list-item {
@@ -470,6 +470,10 @@ input::-webkit-calendar-picker-indicator {
     gap: 16px;
 }
 
+#selected_contacts {
+    display: flex;
+    flex-wrap: wrap;
+}
 
 
 
