--- a/style/task.css
+++ b/style/task.css
@@ -327,12 +327,12 @@ input::-webkit-calendar-picker-indicator {
 }
 .prio-medium{
     color: white;
-    background-color: #7AE229;
+    background-color: #FFA800;
     font-weight: bold !important;
 }
 .prio-urgent{
     color: white;
-    background-color: #7AE229;
+    background-color: #FF3D00;
     font-weight: bold !important;
 }
 
