--- a/style/task.css
+++ b/style/task.css
@@ -310,10 +310,14 @@ input::-webkit-calendar-picker-indicator {
     display: flex;
     margin-top: 8px;
 }
-
+/* prio normal*/
+/* box-shadow: 5px 5px 12px #cacaca*/
+/* selected */
+/* box-shadow: 5px 5px 12px rgba(202, 202, 202, 0) */
 .prio-btn {
     background-color: white;
     gap: 8px !important;
+    box-shadow: 5px 5px 12px rgba(0, 0, 0, 0.15);
 }
 
 .prio-btn:hover {
@@ -324,16 +328,19 @@ input::-webkit-calendar-picker-indicator {
     color: white;
     background-color: #7AE229;
     font-weight: bold !important;
+    box-shadow: 5px 5px 12px rgba(202, 202, 202, 0);
 }
 .prio-medium{
     color: white;
     background-color: #FFA800;
     font-weight: bold !important;
+    box-shadow: 5px 5px 12px rgba(202, 202, 202, 0);
 }
 .prio-urgent{
     color: white;
     background-color: #FF3D00;
     font-weight: bold !important;
+    box-shadow: 5px 5px 12px rgba(202, 202, 202, 0);
 }
 
 #category_list_container {
@@ -492,10 +499,55 @@ input::-webkit-calendar-picker-indicator {
     flex-wrap: wrap;
 }
 
+/* EDIT */
+
+.addTaskPopupPosition {
+    position: absolute;
+    left: 100px;
+    right: 100px;
+    top: 100px;
+    bottom: 100px;
+    display: flex;
+    flex-direction: column;
+    max-width: calc(100vw - 200px);
+    max-height: calc(100vh - 200px);
+    width: 100%;
+    height: 100%;
+    background-color: white;
+    border-radius: 30px;
+}
 
 
-
-
+.contentPositionAddTaskPopup {
+    position: absolute;
+    top: 150px;
+    left: 0;
+    right: 0;
+    bottom: 225px;
+    max-height: calc(100vh - 375px);
+    padding-left: 96px;
+    padding-right: 96px;
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    width: 100%;
+    height: 100%;
+    overflow-y: auto;
+}
+/* task header */
+.addTaskPopupHeadlineContainer {
+    position: fixed;
+    display: flex;
+    justify-content: space-between;
+    align-items: flex-start;
+    top: 130px;
+    left: 196px;
+    right: 196px;
+    max-width: calc(100vw - 392px);
+    padding-bottom: 10px;
+    width: 100%;
+    background-color: white;
+}
 
 
 
