--- a/style/task.css
+++ b/style/task.css
@@ -454,6 +454,13 @@ input::-webkit-calendar-picker-indicator {
     margin-top: 100px;
 }
 
+.task-bottom-edit {
+    display: flex;
+    justify-content: space-between;
+    align-items: flex-end;
+    margin-top: 50px;
+}
+
 .button-group {
     display: flex;
     gap: 8px;
