--- a/style/task.css
+++ b/style/task.css
@@ -14,19 +14,14 @@ ul {
 
 .task-popup-card {
     height: fit-content;
-    /* max-height: 90vh; */
-    /* width: 37vw; */
     background-color: white;
-    border-bottom-right-radius: 30px;
-    border-top-right-radius: 30px;
+    border-bottom-right-radius: 35px;
+    border-top-right-radius: 35px;
     border-bottom-left-radius: 35px;
     border-top-left-radius: 35px;
     display: flex;
-    /* flex-direction: column; */
     justify-content: space-between;
     box-shadow: 0px 2px 10px 0px rgba(0, 0, 0, 0.25);
-    /* border: 1px solid #D1D1D1; */
-    /* padding: 20px; */
 }
 
 .left-popup {
@@ -590,17 +585,11 @@ input[type=tel] {
 /* EDIT */
 
 .addTaskPopupPosition {
-    /* position: absolute;
-    left: 100px;
-    right: 100px;
-    top: 100px;
-    bottom: 100px; */
     display: flex;
     flex-direction: column;
     max-width: calc(100vw - 200px);
     max-height: calc(100vh - 200px);
-    /* width: 100%; */
-    /* height: 100%; */
+    width: 60vw;
     background-color: white;
     border-radius: 30px;
 }
