implemented reset task form and fixed profile picture bug on board

--- a/style/board.css
+++ b/style/board.css
@@ -510,6 +510,9 @@ body {
     border-radius: 100%;
     color: white;
     margin-right: -10px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
 
 
