--- a/style/task.css
+++ b/style/task.css
@@ -156,7 +156,7 @@ ul {
     justify-content: flex-end;
 }
 
-.close-popup-container {
+.close-board_popup_section {
     display: flex;
     justify-content: flex-end;
 }
