--- a/style/task.css
+++ b/style/task.css
@@ -47,7 +47,6 @@ ul {
     border-radius: 1.5px;
 }
 
-
 #left_popup_content {
     display: flex;
     flex-direction: column;
@@ -126,7 +125,7 @@ ul {
     justify-content: center;
 }
 
-.colorSettingBox {
+.color-settings-container {
     display: flex;
     flex-wrap: wrap;
     justify-content: flex-start;
@@ -138,7 +137,7 @@ ul {
     border: 1px solid #D1D1D1;
 }
 
-.selectedColor {
+.selected-color {
     width: 25px !important;
     height: 25px !important;
     border: 2px solid #2A3647;
@@ -184,20 +183,14 @@ ul {
     flex-direction: column;
     width: 100%;
     overflow-y: auto;
-
     margin-top: 106px;
     padding-left: 243px;
-
     /* height: auto; */
-
     /* position: absolute;
-    
     max-width: calc(100vw - 243px);
     max-height: calc(100vh - 246px);
-    
     top: 206px;
     left: 243px;
-
     display: flex;
     flex-direction: column;
     width: 100%;
@@ -314,10 +307,6 @@ input::-webkit-calendar-picker-indicator {
     gap: 8px;
 }
 
-/* prio normal*/
-/* box-shadow: 5px 5px 12px #cacaca*/
-/* selected */
-/* box-shadow: 5px 5px 12px rgba(202, 202, 202, 0) */
 .prio-btn {
     background-color: white;
     gap: 8px !important;
@@ -346,9 +335,6 @@ input::-webkit-calendar-picker-indicator {
     font-weight: bold !important;
 }
 
-
-
-
 #no_profile_img {
     display: flex;
     justify-content: center;
@@ -372,7 +358,6 @@ input::-webkit-calendar-picker-indicator {
     left: 50%;
     transform: translate(-50%, -50%); */
 }
-
 
 #contact_form {
     display: flex;
@@ -410,10 +395,6 @@ input[type=tel] {
     justify-content: space-between;
 }
 
-
-
-
-
 #category_list_container {
     display: flex;
     flex-direction: column;
@@ -447,10 +428,6 @@ input[type=tel] {
     cursor: pointer;
 }
 
-/* .cateogry-list-item:hover img{
-    background-image: url();
-}  */
-
 .delete-category-container {
     display: flex;
     justify-content: center;
@@ -464,17 +441,12 @@ input[type=tel] {
     border-radius: 5px;
 }
 
-.colorCircle {
+.color-circle {
     width: 20px;
     height: 20px;
     border: 2px solid rgba(0, 0, 0);
     border-radius: 50%;
 }
-
-/* .colorCircle:hover {
-    cursor: pointer;
-    box-shadow: 2px 4px 4px 2px rgba(0, 0, 0, 0.30);
-} */
 
 .delete-icon:hover,
 .edit-icon:hover {
@@ -519,7 +491,6 @@ input[type=tel] {
     height: 24px;
     width: 24px;
 }
-
 
 .task-bottom {
     display: flex;
@@ -584,18 +555,17 @@ input[type=tel] {
 
 /* EDIT */
 
-.addTaskPopupPosition {
+.task-edit-popup {
     display: flex;
     flex-direction: column;
     max-width: calc(100vw - 200px);
     max-height: calc(100vh - 200px);
-    width: 60vw;
+    width: 70vw;
     background-color: white;
     border-radius: 30px;
 }
 
-
-.contentPositionAddTaskPopup {
+.task-popup-content {
     padding: 46px 66px;
     display: flex;
     flex-direction: column;
@@ -605,32 +575,33 @@ input[type=tel] {
     overflow-y: auto;
 }
 
-.contentPositionAddTaskPopup form {
+.task-popup-content form {
     width: 100%;
 }
 
-/* task header */
-.addTaskPopupHeadlineContainer {
-    /* position: fixed; */
+.task-popup-headline-container {
     display: flex;
     justify-content: space-between;
     align-items: flex-start;
     top: 130px;
     left: 196px;
     right: 196px;
-    /* max-width: calc(100vw - 392px); */
     padding-bottom: 10px;
     width: 100%;
     background-color: white;
 }
 
+@media (min-width: 2100px) {
+    .task-edit-popup {
+        width: 40vw !important;
+    }
+}
 
-
-
-
-
-
-
+@media (min-width: 1600px) {
+    .task-edit-popup {
+        width: 50vw;
+    }
+}
 
 @media (max-width: 1280px) {
     .task-header {
@@ -641,6 +612,10 @@ input[type=tel] {
     .task-contentposition {
         padding-left: 50px;
         padding-right: 50px;
+    }
+
+    .task-edit-popup {
+        width: 80vw;
     }
 }
 
@@ -724,7 +699,7 @@ input[type=tel] {
         width: 100%;
     }
 
-    .contentPositionAddTaskPopup {
+    .task-popup-content {
         padding-left: 24px;
         padding-right: 24px;
     }
@@ -742,7 +717,7 @@ input[type=tel] {
 }
 
 @media (max-width: 768px) {
-    #cancelBtnMobileId{
+    #cancel_btn{
         display: none;
     }
 
@@ -777,7 +752,7 @@ input[type=tel] {
         width: 100% !important;
     }
 
-    .addTaskPopupPosition {
+    .task-edit-popup {
         max-width: 100vw;
         max-height: 100vh;
         height: 100vh;
@@ -788,7 +763,6 @@ input[type=tel] {
         display: flex;
         justify-content: space-between;
         /* align-items: flex-end; */
-
         padding-top: 0px;
         padding-bottom: 81px;
         margin-top: 48px;
@@ -803,7 +777,6 @@ input[type=tel] {
         gap: 24px;
         width: 100%;
     }
-
 }
 
 @media (max-width: 400px) {
