--- a/style/style.css
+++ b/style/style.css
@@ -382,7 +382,7 @@ section {
         padding-bottom: 30px;
     }
 
-    .leftContainer {
+    .left-container {
         margin-left: 0;
     }
 }
