--- a/style/summary.css
+++ b/style/summary.css
@@ -179,7 +179,7 @@ body {
     text-align: start;
 }
 
-.leftContainer {
+.left-container {
     margin-left: 96px;
 }
 
@@ -188,7 +188,7 @@ body {
     flex-direction: column;
 }
 
-.columnCenter {
+.column-center {
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -239,7 +239,7 @@ body {
     background-color: var(--active-sildebar-page)
 }
 
-.blueLineWithText {
+.blue-line-with-text {
     display: flex;
 }
 
@@ -333,7 +333,7 @@ body {
         margin-Bottom: 40px !important;
     }
 
-    .blueLineWithText {
+    .blue-line-with-text {
         flex-direction: column-reverse;
     }
 
@@ -343,7 +343,7 @@ body {
         margin: 8px 0 16px;
     }
 
-    .leftContainer {
+    .left-container {
         margin: 0 16px !important;
     }
 
